--- a/qst02.html
+++ b/qst02.html
@@ -42,5 +42,29 @@
                 </li>
             </ul>
         </div>
+
+        <script type="text/javascript">
+            var valueElem = document.getElementById("value");
+            var queueValuesElem = document.getElementById("queue-values");
+
+            var enqueueButton = document.getElementById("enqueue");
+            var dequeueButton = document.getElementById("dequeue");
+
+            var queueValues = [];
+
+            function refreshQueue(newQueue) {
+                while (queueValuesElem.firstChild)
+                    queueValuesElem.removeChild(queueValuesElem.firstChild);
+
+                for (let value of newQueue) {
+                    newValue = document.createElement('li');
+                    newValue.textContent = value;
+                    newValue.classList.add("queue-element");
+                    queueValuesElem.appendChild(newValue);
+                }
+            }
+
+            refreshQueue([1, 3, 5, 7, 231, 5345]);
+        </script>
     </body>
 </html>
