--- a/qst03.html
+++ b/qst03.html
@@ -130,28 +130,76 @@
                     <h1>Estudantes</h1>
                     <ul id="students-list">
                         <li>Lia - 15</li>
-                        <li>
-                            Alguem - 17
-                            <form class="edit" action="">
-                                <input id="edit-person-id" type="hidden" name="person-id" value="1">
-                                <label id="edit-person-name" class="field">
-                                    <span>Nome:</span>
-                                    <input type="text" name="person-name" placeholder="Digite o nome aqui" value="Alguem">
-                                </label>
-                                <label id="edit-person-age" class="field">
-                                    <span>Idade:</span>
-                                    <input type="number" min="1" name="person-age" placeholder="Digite a idade aqui" value="17">
-                                </label>
-                                <div class="actions">
-                                    <button id="register" type="button" name="add">Exluir</button>
-                                    <button id="register" type="button" name="add">Atualizar</button>
-                                </div>
-                            </form>
-                        </li>
+                        <li>Alguem - 8</li>
                         <li>Paula - 17</li>
                     </ul>
                 </section>
             </div>
         </div>
+
+        <template id="edit-template">
+            <form class="edit" action="">
+                <input type="hidden" name="person-id" value="1">
+                <label class="field">
+                    <span>Nome:</span>
+                    <input type="text" name="person-name" placeholder="Digite o nome aqui" value="Alguem">
+                </label>
+                <label class="field">
+                    <span>Idade:</span>
+                    <input type="number" min="1" name="person-age" placeholder="Digite a idade aqui" value="17">
+                </label>
+                <div class="actions">
+                    <button type="button" name="delete">Excluir</button>
+                    <button type="button" name="update">Atualizar</button>
+                </div>
+            </form>
+        </template>
+
+        <script type="text/javascript">
+            var adultsListElem = document.getElementById("adults-list")
+            var studentsListElem = document.getElementById("students-list")
+
+            var adultsList = {
+                0: {name: 'Marcelo', age: 22},
+                1: {name: 'Jõao', age: 31},
+                2: {name: 'Diogo', age: 19},
+                3: {name: 'Octávio', age: 18},
+            };
+            var studentsList = {
+                0: {name: "Lia", age: 15},
+                1: {name: "Alguem", age: 8},
+                2: {name: "Paula", age: 17},
+            };
+
+            currentEditForm = null;
+            function createEditForm(id, list)
+            {
+                if (currentEditForm)
+                    currentEditForm.remove();
+
+                var template = document.getElementById("edit-template");
+
+                var clone = document.importNode(template.content, true).firstElementChild;
+
+                clone.elements["person-id"].value = id;
+                clone.elements["person-name"].value = list[id].name;
+                clone.elements["person-age"].value = list[id].age;
+
+                clone.elements["delete"].addEventListener("click", function() {
+                    console.log("Delete " + list[id].name);
+                })
+
+                clone.elements["update"].addEventListener("click", function() {
+                    console.log("Update " + list[id].name);
+                })
+
+                currentEditForm = clone;
+                return clone;
+            }
+
+            studentsListElem.children[1].appendChild(createEditForm(1, studentsList));
+            // document.body.appendChild(createEditForm(1, studentsList));
+            // document.body.appendChild(createEditForm(2, studentsList));
+        </script>
     </body>
 </html>
