Utilizar listas ordenadas para a questão 02

--- a/qst02.html
+++ b/qst02.html
@@ -8,7 +8,7 @@
                 display: flex;
             }
 
-            .queue ul {
+            .queue ol {
                 padding: 0;
             }
             .queue .queue-element {
@@ -33,14 +33,14 @@
             <button id="dequeue" type="button" name="dequeue">Desempilhar</button>
         </form>
         <div class="queue">
-            <ul id="queue-values">
+            <ol id="queue-values">
                 <li class="queue-element">1
                 </li><li class="queue-element">2
                 </li><li class="queue-element">3
                 </li><li class="queue-element">4
                 </li><li class="queue-element">5
                 </li>
-            </ul>
+            </ol>
         </div>
 
         <script type="text/javascript">
