--- a/qst04.html
+++ b/qst04.html
@@ -3,6 +3,41 @@
     <head>
         <meta charset="utf-8">
         <title>Organização de Animais</title>
+        <style media="screen">
+            /* https://github.com/mdn/learning-area/blob/master/html/tables/basic/minimal-table.css */
+            table {
+                font-family: sans-serif;
+                border-collapse: collapse;
+                border: 2px solid rgb(200,200,200);
+                letter-spacing: 1px;
+                font-size: 0.8rem;
+            }
+
+            td, th {
+                border: 1px solid rgb(190,190,190);
+                padding: 10px 20px;
+            }
+
+            th {
+                background-color: rgb(235,235,235);
+            }
+
+            td {
+                text-align: center;
+            }
+
+            tr:nth-child(even) td {
+                background-color: rgb(250,250,250);
+            }
+
+            tr:nth-child(odd) td {
+                background-color: rgb(245,245,245);
+            }
+
+            caption {
+                padding: 10px;
+            }
+        </style>
     </head>
     <body>
         <h1>Organização de Animais</h1>
@@ -29,5 +64,28 @@
             </label><br />
             <input type="submit" name="create" id="create">
         </form>
+        <table>
+            <caption>Características dos animais</caption>
+            <thead>
+                <tr>
+                    <th>Animal</th>
+                    <th>Altura</th>
+                    <th>Peso</th>
+                    <th>Velocidade</th>
+                    <th>Idade máxima</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>Média</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+            </tfoot>
+        </table>
     </body>
 </html>
