Adicionar frases descrevendo os extremos da tabela

--- a/qst04.html
+++ b/qst04.html
@@ -87,5 +87,9 @@
                 </tr>
             </tfoot>
         </table>
+        <p>O animal mais alto é <span class="highest"></span></p>
+        <p>O animal mais pesado é <span class="heaviest"></span></p>
+        <p>O animal mais veloz é <span class="fastest"></span></p>
+        <p>O animal mais longevo é <span class="longest"></span></p>
     </body>
 </html>
