Adicionar frase descrevendo quantos animais estão acima da média de peso

--- a/qst04.html
+++ b/qst04.html
@@ -91,5 +91,6 @@
         <p>O animal mais pesado é <span class="heaviest"></span></p>
         <p>O animal mais veloz é <span class="fastest"></span></p>
         <p>O animal mais longevo é <span class="longest"></span></p>
+        <p>Existem <span></span> acima da média de peso</p>
     </body>
 </html>
